--- a/.env.sample
+++ b/.env.sample
@@ -1,3 +1,3 @@
-REACT_APP_AUTH0_DOMAIN=
-REACT_APP_AUTH0_CLIENT_ID=
-REACT_APP_API=
+REACT_APP_AUTH0_DOMAIN=<TENANT_DOMAIN>// ex: <tenant>.us.auth0.com
+REACT_APP_AUTH0_CLIENT_ID=<APPLICATION_CLIENT_ID> 
+REACT_APP_API=<YOUR API URL>// ex: http://localhost:8080/api/v1 
